--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <img class="logo" src="images/logo.svg" alt="logo">
     <div class="calculator">
       <label>Bill</label>
-      <input class="bill-input" type="number" name="" value="" placeholder="0" min="0">
+      <input class="bill-input" type="number" placeholder="0" min="0">
 
 
       <label>Select Tip %</label>
@@ -32,11 +32,11 @@
         <button type="button" class="tip-btn" name="button">15%</button>
         <button type="button" class="tip-btn" name="button">25%</button>
         <button type="button" class="tip-btn" name="button">50%</button>
-        <input class="tip-custom" type="number" name="" value="" placeholder="Custom" min="0">
+        <input class="tip-custom" type="number"placeholder="Custom" min="0">
       </div>
 
       <label><span>Number of People</span><span class="error-label">Can't be zero</span></label>
-      <input class="noOfPeople" type="number" name="" value="" placeholder="0" min="0">
+      <input class="noOfPeople" type="number" placeholder="0" min="0">
     </div>
 
     <div class="result">
